fix: restrict CORS origins and keep CSRF on non-API routes